Add integration of VTask into the Effect Path API with VTaskPath (#318)
* Add integration of VTask into the Effect Path API with VTaskPath

- Add VTaskPath and VTaskContext sections to hkj-book documentation
- Create TutorialVTaskForPath with 10 exercises and solutions
- Add VTaskPath, IOPath, and comparison benchmarks
- Enhance hkj-benchmarks README with architecture tables and expected results
- Add new benchmarks: ConcurrencyScaling, MemoryFootprint, AbstractionOverhead
- Fix consistency: standardize chainDepth to 50, parameterize VTaskParBenchmark

* VTaskPath zipWith/zipWith3 parallel execution

- Add zipWith behavior row to VTaskPath vs IOPath comparison table
- Update VTaskPathBenchmark comments to note parallel execution
Use Par.map2 and Par.map3 instead of sequential execution to leverage
virtual thread efficiency for concurrent workloads.